--- a/portfolio.html
+++ b/portfolio.html
@@ -150,6 +150,13 @@
         <li class="footer-soc-items"><a href="*" class="footer-soc-link"><svg width="20" height="20" class="footer-icon"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
     </ul>
 </div>
+<div class="fotter-feedback">
+    <b>ПІДПИШІТЬСЯ НА РОЗСИЛКУ</b>
+    <form class="footer-form">
+        <input type="email" name="mail" id="mail-footer" placeholder="E-mail">
+        <button class="submit-footer" type="submit">Підписатися <svg class="icon-send" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg></button>
+    </form>
+</div>
 </div>
 </footer>
 </body>
