--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <input class="checkbox" type="checkbox" name="policy" id="policy">
                     <span class="icon-check"><svg width="15" height="15" class="checkbox-svg"><use href="./images/icons.svg#icon-icon-check"></use></svg></span>
                      Погоджуюся з розсилкою та приймаю 
-                     <a class="policy-span" href="">&nbspУмови договору</a>
+                     <a class="policy-span" href="">&nbsp; Умови договору</a>
                     </label>
             </div>
             <button class="modal-submit" type="submit">Відправити</button>
