--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
         <li class="footer-soc-items"><a href="*" class="footer-soc-link"><svg width="20" height="20" class="footer-icon"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
     </ul>
 </div>
-<div class="fotter-feedback">
-    <b>ПІДПИШІТЬСЯ НА РОЗСИЛКУ</b>
+<div class="footer-feedback">
+    <b class="feedback-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</b>
     <form class="footer-form">
-        <input type="email" name="mail" id="mail-footer" placeholder="E-mail">
+        <input class="" type="email" name="mail" id="mail-footer" placeholder="E-mail">
         <button class="submit-footer" type="submit">Підписатися <svg class="icon-send" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg></button>
     </form>
 </div>
@@ -185,24 +185,24 @@
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button class="button-close" data-modal-close><svg width="11" height="11" class="icon-close" ><use href="./images/icons.svg#icon-close2"></use></svg></button>
-        <h2 class="feedback">Залиште свої дані, ми вам передзвонимо</h2>
+        <p class="feedback">Залиште свої дані, ми вам передзвонимо</p>
         <form class="form">
             <div class="form-field">
                 <label for="name">Ім'я</label>
             <input class="form-input" type="text" name="name" id="name">
-            <span class="icon-name current-icon"><svg width="12" height="12" ><use href="./images/icons.svg#icon-modal-name"></use></svg></span>
+            <span class="icon-form"><svg width="12" height="12" ><use href="./images/icons.svg#icon-modal-name"></use></svg></span>
             </div>
             
             <div class="form-field">
                 <label for="tel">Телефон</label>
             <input class="form-input" type="tel" name="tel" id="tel">
-            <span class="icon-modal-tel current-icon"><svg width="12" height="12" ><use href="./images/icons.svg#icon-modal-tel"></use></svg></span>
+            <span class="icon-form"><svg width="12" height="12" ><use href="./images/icons.svg#icon-modal-tel"></use></svg></span>
             </div>
             
             <div class="form-field">
                 <label for="mail">Пошта</label>
             <input class="form-input" type="email" name="mail" id="mail">
-            <span class="icon-modal-mail current-icon"><svg width="12" height="12" ><use href="./images/icons.svg#icon-modal-mail"></use></svg></span>
+            <span class="icon-form"><svg width="12" height="12" ><use href="./images/icons.svg#icon-modal-mail"></use></svg></span>
             </div>
             <div class="form-field">
                 <label for="comment">Коментар</label>
