--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         </ul>
     </nav>
         <ul class="contact">
-        <li class="item icon-mail">
+        <li class="item">
             <a class="contact-list" href="mailto:info@devstudio.com">
-                <svg class="icon-mail" width="16" height="12"><use href="./images/icons.svg#icon-mail"></use></svg>
+                <svg class="contact-icon" width="16" height="12"><use href="./images/icons.svg#icon-mail"></use></svg>
                 info@devstudio.com</a>
         </li>
-        <li class="item icon-tel">
+        <li class="item">
             <a class="contact-list" href="tel:+380961111111">
-                <svg class="icon-tel" width="10" height="16"><use href="./images/icons.svg#icon-tel"></use></svg>
+                <svg class="contact-icon" width="10" height="16"><use href="./images/icons.svg#icon-tel"></use></svg>
                 +380961111111</a>
         </li>
     </ul>
