--- a/portfolio.html
+++ b/portfolio.html
@@ -24,11 +24,16 @@
             <li class="item"><a class="link" href="">Контакти</a></li>
         </nav>
             <ul class="contact">
-                <li class="item"><a class="contact-list" href="mailto:info@devstudio.com">
-                    <svg class="icon-mail" width="16" height="12"><use href="./images/icons.svg#icon-mail"></use></svg>
+                <li class="item">
+                    <a class="contact-list" href="mailto:info@devstudio.com">
+                    <svg class="contact-icon" width="16" height="12"><use href="./images/icons.svg#icon-mail"></use></svg>
                     info@devstudio.com</a></li>
-                <li class="item"><a class="contact-list" href="tel:+380961111111">
-                    <svg class="icon-tel" width="10" height="16"><use href="./images/icons.svg#icon-tel"></use></svg>
+                <li class="item">
+                    <a class="contact-list" href="tel:+380961111111">
+                    <svg class="contact-icon" width="10" height="16">
+                        <use href="./images/icons.svg#icon-tel">
+                        </use>
+                    </svg>
                     +380961111111</a></li>
             </ul>  
     </div>
